--- a/style.css
+++ b/style.css
@@ -27,12 +27,17 @@ html {
 }
 
 body {
-    margin: 0 auto;
+    margin: 0 auto 100px;
     width: 1024px;
 }
 
 a, a:hover, a:visited, a:active, a:focus {
     color: #9876AA;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 code {
@@ -49,6 +54,59 @@ h1 {
     text-align: center;
 }
 
+.button {
+    padding: 20px;
+    color: white;
+    font-weight: bold;
+    background-color: #c76ea5;
+    background-image: linear-gradient(top, #ca75aa, #b95891);
+    font-size:1.75em;
+    border-radius: 12px;
+    display: inline-block;
+    font-style: italic;
+    box-shadow: inset 0px 2px 0px 0px rgba(255, 255, 255, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.2);
+}
+
+.button:hover {
+    color: white;
+    text-decoration: none;
+    background-color: #d07cb0;
+    background-image: linear-gradient(top, #e89ccc, #ca75aa);
+}
+
+.ruby {
+    background-color: #CC342D;
+    background-image: linear-gradient(top, #E03931, #B42E28);
+}
+
+.ruby:hover {
+    background-color: #E03931;
+    background-image: linear-gradient(top, #F43E35, #CC342D);
+}
+
+.objective-c {
+    background-color: #CCCCCC;
+    background-image: linear-gradient(top, #DEDEDE, #BBB);
+}
+
+.objective-c:hover {
+    background-color: #DEDEDE;
+    background-image: linear-gradient(top, #FBFBFB, #CCCCCC);
+}
+
+.languages {
+    overflow: auto;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+}
+
+.languages li {
+    list-style: none;
+    float: left;
+    padding-right: 20px;
+}
 
 
 /* Scale & Rhythm @ http://lamb.cc/typograph/ */
