--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Code+Pro);
-
 .dark-background { color: #2B2B2B; }
 .medium-background { color: #323232; }
 .light-background { color: #3C3F41; }
@@ -9,7 +7,25 @@
 html {
     color: white;
     background: #000000 linear-gradient(to bottom, #45484d 0%, #000000 100%) no-repeat;
-    font-family: sans-serif;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 300;
+}
+
+.logo {
+    font-size: 0.5em;
+    width: 1.75em;
+    height: 1.75em;
+    line-height: 1.75em;
+    color: #9876AA;
+    font-weight: 200;
+    border: 3px solid;
+    border-radius: 2px;
+    display: inline-block;
+    vertical-align: text-bottom;
+}
+
+.logo:before {
+    content: "f(x)";
 }
 
 body {
@@ -37,7 +53,7 @@ code {
     overflow: auto;
     overflow-y: hidden;
     background-color: #323232;
-    font-family: monospace;
+    font-family: Menlo, Monaco, monospace;
 }
 
 pre > code {
