--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ html {
     vertical-align: middle;
 }
 
+.fork-me {
+    position: absolute; top: 0; left: 0; border: 0;
+}
+
 .logo:before {
     content: "f(x)";
 }
