--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="font-mfizz/font-mfizz.css"/>
-    <title>Totallylazy</title>
+    <title>Hello</title>
 
 </head>
 
