--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'/>
     <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="font-mfizz/font-mfizz.css"/>
@@ -13,7 +14,8 @@
 
 <body>
     <header>
-        <h1><i class="logo"></i> Totallylazy</h1>
+        <h1><i class="logo"></i>TotallyLazy</h1>
+        <p>A complete functional environment for Java</p>
         <a href="https://github.com/bodar/totallylazy/"><img class="fork-me" src="fork.me.on.github.png" alt="Fork me on GitHub"></a>
     </header>
 
