--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
 html {
     color: white;
-    background: #000000 linear-gradient(to bottom, #45484d 0%, #000000 100%) no-repeat;
+    background-color: #000000;
+    background: linear-gradient(to bottom, #45484d 0%, #000000 100%) no-repeat;
     font-family: 'Oxygen', sans-serif;
     font-weight: 300;
 }
@@ -98,7 +99,6 @@ header p {
     font-size:1.33333em;
     border-radius: 12px;
     display: inline-block;
-    font-style: italic;
     box-shadow: inset 0 2px 0 0 rgba(255, 255, 255, 0.2), 0 3px 4px 0 rgba(0, 0, 0, 0.2);
 }
 
